[gd_scene load_steps=12 format=4 uid="uid://cyjsg1ujfqj5y"]

[ext_resource type="PackedScene" uid="uid://cjvqk1d0ebx55" path="res://common/atoms/debug_mode/debug_mode.tscn" id="1_f0ulu"]
[ext_resource type="PackedScene" uid="uid://dllc5jfk53p86" path="res://common/molecules/background_animated/background_animated.tscn" id="2_3c3db"]
[ext_resource type="PackedScene" uid="uid://ju7maq1qeu40" path="res://common/molecules/background.tscn" id="2_d3sdy"]
[ext_resource type="TileSet" uid="uid://dnspyeioavgls" path="res://common/atoms/tile_set_bg.tres" id="4_fiuwg"]
[ext_resource type="PackedScene" uid="uid://bqsmf1mn60c0i" path="res://common/molecules/level_manager/level_manager.tscn" id="4_qgkcl"]
[ext_resource type="PackedScene" uid="uid://gmk3y8axidpf" path="res://common/molecules/level_manager/level_layer.tscn" id="5_2yalj"]
[ext_resource type="Script" path="res://common/molecules/drawable_tilemap/drawable_tilemap.gd" id="5_6psld"]
[ext_resource type="PackedScene" uid="uid://cdo5hamcxy2ol" path="res://common/molecules/win_screen/win_screen.tscn" id="6_4q50l"]
[ext_resource type="Script" path="res://game-specific/game_17/game_17.gd" id="6_hf4tu"]
[ext_resource type="PackedScene" uid="uid://bk70tq5tr40dh" path="res://game-specific/game_17/color_button.tscn" id="7_i4kca"]
[ext_resource type="PackedScene" uid="uid://7t0mxra1avpw" path="res://game-specific/game_17/color_rule.tscn" id="10_ohvm1"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="DEBUG_MODE" parent="." instance=ExtResource("1_f0ulu")]
visible = false

[node name="BackgroundAnimated" parent="." instance=ExtResource("2_3c3db")]
z_index = -3
layout_mode = 1
offset_right = 3472.0
offset_bottom = 1952.0

[node name="Background" parent="." instance=ExtResource("2_d3sdy")]
modulate = Color(1, 1, 1, 0.560784)
z_index = -2
layout_mode = 1
metadata/_edit_lock_ = true

[node name="LevelManager" parent="." instance=ExtResource("4_qgkcl")]
layout_mode = 1

[node name="LevelLabel" parent="LevelManager" index="0"]
offset_top = 579.0
offset_bottom = 613.0

[node name="SpawnHere" parent="LevelManager" index="1"]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Level1" parent="LevelManager" instance=ExtResource("5_2yalj")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Center" type="Control" parent="LevelManager/Level1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="DrawableTilemap" type="TileMapLayer" parent="LevelManager/Level1/Center"]
scale = Vector2(12, 12)
tile_map_data = PackedByteArray("AAD//wAAAAAAAAAAAwD/////AAAAAAAAAwAAAP//AAAAAAAAAwAAAAAAAAAAAAAAAgABAP7/AAAAAAAAAwABAAEAAAAAAAAAAwD+/wEAAAAAAAAAAwD//wEAAAAAAAAAAwAAAAEAAAAAAAAAAwABAAAAAAAAAAAAAwABAP//AAAAAAAAAwAAAP7/AAAAAAAAAwD///7/AAAAAAAAAwD+////AAAAAAAAAwD+/wAAAAAAAAAAAwD+//7/AAAAAAAAAwA=")
tile_set = ExtResource("4_fiuwg")
script = ExtResource("5_6psld")

[node name="Hover" type="TileMapLayer" parent="LevelManager/Level1/Center/DrawableTilemap"]
modulate = Color(1, 1, 1, 0.129412)
tile_set = ExtResource("4_fiuwg")

[node name="Game17" type="Node" parent="LevelManager/Level1" node_paths=PackedStringArray("n_tilemap", "n_palette")]
script = ExtResource("6_hf4tu")
n_tilemap = NodePath("../Center/DrawableTilemap")
n_palette = NodePath("../Palette")
preset_color_button = ExtResource("7_i4kca")
preset_color_rule = ExtResource("10_ohvm1")

[node name="Palette" type="VBoxContainer" parent="LevelManager/Level1"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 310.0
offset_right = 370.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Level2" parent="LevelManager" instance=ExtResource("5_2yalj")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Center" type="Control" parent="LevelManager/Level2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="DrawableTilemap" type="TileMapLayer" parent="LevelManager/Level2/Center"]
scale = Vector2(12, 12)
tile_map_data = PackedByteArray("AAD//wAAAAAAAAAAAgD/////AAAAAAAAAgAAAP//AAAAAAAAAgAAAAAAAAAAAAAAAgABAP7/AAAAAAAAAwABAAEAAAAAAAAAAwD+/wEAAAAAAAAAAwD//wEAAAAAAAAAAwAAAAEAAAAAAAAAAwABAAAAAAAAAAAAAwABAP//AAAAAAAAAwAAAP7/AAAAAAAAAwD///7/AAAAAAAAAwD+////AAAAAAAAAwD+/wAAAAAAAAAAAwD+//7/AAAAAAAAAwA=")
tile_set = ExtResource("4_fiuwg")
script = ExtResource("5_6psld")

[node name="Hover" type="TileMapLayer" parent="LevelManager/Level2/Center/DrawableTilemap"]
modulate = Color(1, 1, 1, 0.129412)
tile_set = ExtResource("4_fiuwg")

[node name="Game17" type="Node" parent="LevelManager/Level2" node_paths=PackedStringArray("n_tilemap", "n_palette")]
script = ExtResource("6_hf4tu")
n_tilemap = NodePath("../Center/DrawableTilemap")
n_palette = NodePath("../Palette")
preset_color_button = ExtResource("7_i4kca")
preset_color_rule = ExtResource("10_ohvm1")

[node name="Palette" type="VBoxContainer" parent="LevelManager/Level2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 310.0
offset_right = 370.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WinScreen" parent="." instance=ExtResource("6_4q50l")]
layout_mode = 1

[connection signal="GameWon" from="LevelManager" to="WinScreen" method="show_screen" binds= ["Congratulations! ^^"]]
[connection signal="InitLevel" from="LevelManager/Level1" to="LevelManager/Level1/Game17" method="load_level_proxy"]
[connection signal="OnDraw" from="LevelManager/Level1/Center/DrawableTilemap" to="LevelManager/Level1/Game17" method="check_win"]
[connection signal="NextLevel" from="LevelManager/Level1/Game17" to="LevelManager" method="next_level"]
[connection signal="InitLevel" from="LevelManager/Level2" to="LevelManager/Level2/Game17" method="load_level_proxy"]
[connection signal="OnDraw" from="LevelManager/Level2/Center/DrawableTilemap" to="LevelManager/Level2/Game17" method="check_win"]
[connection signal="NextLevel" from="LevelManager/Level2/Game17" to="LevelManager" method="next_level"]

[editable path="LevelManager"]
